# arcology

./: .env.example  .flaskenv  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dentrypoint.sh  Dockerfile  Jenkinsfile  README.md  docker-compose.adminer.yml  docker-compose.s3.yml  docker-compose.yml  flask_template_review.md  install.py  pyproject.toml  requirements.txt
arcology_shared/: archive_formats.py  artefact_types.py  config.py  content_categories.py  enums.py  fuzzyhash.py  hints.py  replay_codecs.py  storage.py  transcode_paths.py
ci/: check_imports.py  check_migration_conflict.py  check_migration_sanity.py  check_syntax.py  run_app_tests.py  test_add_to_hashdb_async_link.py  test_analysis_derived_visibility.py  test_analysis_index_counts.py  test_analysis_priority.py  test_analysis_queue_barrier.py  test_api_create_hashdb.py  test_api_outputs_visibility.py  test_api_serializers.py  test_app_smoke.py  test_archive_detection.py  test_archive_formats.py  test_archive_magic_sniff.py  test_archive_promotion.py  test_armovie_parser.py  test_artefact_bypass.py  test_artefact_cleanup.py  test_artefact_map.py  test_artefact_type_override.py  test_batch_scaffold.py  test_blob_dedup.py  test_bulk_import.py  test_bundle_detection.py  test_bundle_marker.py  test_cache.py  test_cartesian_join.py  test_cautions.py  test_checksum_compute.py  test_chunked_finalize.py  test_chunked_upload.py  test_chunked_upload_limits.py  test_cleanup_jobs.py  test_cli_chunked.py  test_cli_hashdb_import.py  test_content_categories.py  test_csp.py  (+92 more)
cli/: arco  pyproject.toml
cli/arccli/: __init__.py  __main__.py  client.py  config.py  formatting.py  main.py
cli/arccli/commands/: __init__.py  bulk_import.py  debug.py  download.py  hashdb.py  hashdb_generate.py  items.py  status.py  taxonomy.py  upload.py
devtools/: arcology-hashdb.py  backfill_search_data.py  bulk-import.py  db_branch_switch.py  fetch_swagger_ui.sh  hfe_debug.py  import-arcarc-hashdb.py  make_fixtures.py  nsfw_debug.py  run_debug.py
doc/: ADMIN_COMMANDS.md  ARCHIVE_EXTRACTION.md  ARCHIVE_EXTRACTION_DESIGN.md  BRANCH_DB_SWITCHING.md  BULK_IMPORT.md  CHUNKED_UPLOADS.md  CLI.md  CODEBASE_REVIEW.md  DESIGN_BACKLOG.md  DEVELOPING.md  FLUX_DECODE.md  ISSUE_34_IMPLEMENTATION_SUMMARY.md  JENKINS_CI.md  MIGRATION_CONFLICTS.md  MIGRATION_PATTERNS.md  PARTITION_IMPROVEMENTS.md  PRIVACY.md  REPLAY_TRANSCODE.md  S3_STORAGE.md  SIMILARITY_MATCHING.md  SSO.md  USER_GUIDE.md  WORKER_POOLS.md  openapi.yaml
docker/: garage-entrypoint.sh  garage.toml
hooks/: pre-push
migrations/: 001_partition_unique_constraint.sql  002_add_is_directory_column.sql  003_add_container_format_column.sql  alembic.ini  env.py
myapp/: __init__.py  __main__.py  app.py  archive_formats.py  database.py  enums.py  extension_labels.py  extensions.py  myapp.cfg.example  permissions.py  riscos_filetypes.py  version.py  visibility.py
reviews/: 260531-e25f67c-review.md
(+408 files in other folders)
