[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "arcology-cli"
version = "0.1.0"
description = "Command-line client for Arcology digital artefact catalogue"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.scripts]
arco = "arccli.main:main"
