[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "arcology-cli"
version = "0.2.0"
description = "Command-line client for Arcology digital artefact catalogue"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
]

[project.urls]
Repository = "https://github.com/philpem/arcology"

[project.scripts]
arco = "arccli.main:main"
