[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcology-cli"
version = "0.2.0"
description = "Command-line client for Arcology digital artefact catalogue"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests",
    "zstandard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
]

[project.urls]
Repository = "https://github.com/philpem/arcology"

[project.scripts]
arco = "arccli.main:main"

# The repo-level shared/ package (enums, bundle marker, archive formats) is
# bundled into the wheel so the CLI can import it without a repo checkout.
# shared/ remains the single source of truth used by the web app and worker;
# the wheel carries a copy taken at build time.
#
# Note for editable installs (`pip install -e cli/`): hatchling copies
# force-included files at install time rather than linking them, so changes
# to shared/ need the editable install re-run to be picked up.  In-repo
# development is unaffected (tests put the repo root on sys.path).
[tool.hatch.build.targets.wheel]
packages = ["arccli"]

[tool.hatch.build.targets.wheel.force-include]
"../shared" = "shared"

[tool.hatch.build.targets.sdist]
include = ["arccli", "pyproject.toml"]

[tool.hatch.build.targets.sdist.force-include]
"../shared" = "shared"
